Add suppot and best doc section

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -117,6 +117,8 @@ $border-radius-none: var(--border-radius-none);
 $border-radius-style-1: var(--border-radius-style-1);
 $border-radius-style-2: var(--border-radius-style-2);
 $border-radius-style-3: var(--border-radius-style-3);
+$border-radius-style-4: var(--border-radius-style-4);
+$border-radius-style-5: var(--border-radius-style-5);
 
 $button-radius1 : var(--button-radius1);
 $card-radius: var(--card-radius);
