--- a/scss/base/_utility.scss
+++ b/scss/base/_utility.scss
@@ -134,11 +134,29 @@
 .rt-color-shade6-bg {
     @extend %color-shade6-bg;
 }
-.rt-color-shade14-bg {
-    @extend %color-shade14-bg;
+.rt-color-shade7-bg {
+    @extend %color-shade7-bg;
+}
+.rt-color-shade8-bg {
+    @extend %color-shade8-bg;
+}
+.rt-color-shade9-bg {
+    @extend %color-shade9-bg;
+}
+.rt-color-shade10-bg {
+    @extend %color-shade10-bg;
+}
+.rt-color-shade11-bg {
+    @extend %color-shade11-bg;
 }
 .rt-color-shade12-bg {
     @extend %color-shade12-bg;
+}
+.rt-color-shade13-bg {
+    @extend %color-shade13-bg;
+}
+.rt-color-shade14-bg {
+    @extend %color-shade14-bg;
 }
 .rt-color-shade15-bg {
     @extend %color-shade15-bg;
@@ -332,6 +350,12 @@
 }
 .rt-border-radius-style-3 {
     @extend %border-radius-style-3;
+}
+.rt-border-radius-style-4 {
+    @extend %border-radius-style-4;
+}
+.rt-border-radius-style-5 {
+    @extend %border-radius-style-5;
 }
 
 
