--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -9,4 +9,6 @@
 @import "lo-page-title-banner";
 @import "lo-404";
 @import "lo-testimonial";
+@import "lo-support";
+@import "lo-best-online-doc";
 
