Add testimonial section design

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -45,7 +45,7 @@
     --color-gray14: #DCDBE6;
     --color-gray15: #F7F6F3;
 
-    --color-bg: #FAF9F6;
+    --color-bg: #FFFCF6;
     --color-dark-bg: #110E19;
 
     --bg-color2: #EDF7F3;
