--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -70,7 +70,7 @@
         &:hover {
             .icon {
                 position: unset;
-                // background: red;
+                box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
                 @include transition;
                 &::before {
                     height: 200%;
@@ -121,7 +121,7 @@
             box-shadow: 20px 20px 25px rgba(0, 0, 0, 0.2);
             .icon {
                 position: unset;
-                // background: red;
+                box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
                 @include transition;
                 &::before {
                     height: 200%;
