--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -133,26 +133,17 @@
 
 
 .swiper {
-    padding-bottom: 80px;
+    padding-bottom: 120px;
 }
-// .swiper-slide,.swiper-wrapper {
-//     transform: translate3d(-224px, 0px, 0px);
-// }
 
-// .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-//     margin: 0 5px;
-// }
-// .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction {
-//     bottom: 0;
-// }
 .swiper-pagination .swiper-pagination-bullet {
     background: #D9D9D9;
-    width: 15px;
-    height: 15px;
+    width: 10px;
+    height: 10px;
     opacity: 1;
 } 
 .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    background-color: $color-primary;
+    background-color: #12D28C;
 }
 
 
