--- a/scss/components/_cp-section-text-content.scss
+++ b/scss/components/_cp-section-text-content.scss
@@ -16,9 +16,9 @@
     padding-bottom: 30px;
 }
 .para-text {
-    font-family: $font-outfit;
+    font-family: $font-roboto;
     font-weight: 400;
     font-size: 16px;
-    line-height: 28px;
-    color: $color-shade1;
+    line-height: 30px;
+    color:#6B707F;
 }
