--- a/scss/components/_cp-testimonial.scss
+++ b/scss/components/_cp-testimonial.scss
@@ -1,50 +1,28 @@
 .testimonial-item {
     background: $color-white;
-    border: 1px solid #DBDBDB;
-    gap: 21px;
-    padding: 50px 30px 50px 35px;
-    // width: 500px;
+    padding: 50px 33px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.04);
 
-    .testimonial-avatar {
-
+    .quotation-icon {
+        margin-bottom: 20px;
     }
-    .testimonial-text-content-wrapper {
-        flex: 1;
-        .ratings {
-            margin-bottom: 10px;
-            ul {
-                gap: 3px;
-            }
+    .author-info {
+        .name {
+            font-family: $font-roboto;
+            font-style: italic;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 30px;
+            text-align: center;
+            color: #969696;
         }
-        .testimonial-comment {
-            p {
-                line-height: 26px;
-            }
-            margin-bottom: 5px;
-        }
-        .author-info {
-            .name {
-                font-family: $font-outfit;
-                font-weight: 600;
-                @include toRem(font-size, 20);
-                line-height: 28px;
-                text-transform: capitalize;
-                color: $color-title;
-            }
-        }
+        margin-bottom: 15px;
     }
+    .testimonial-comment {
+        margin-bottom: 15px;
+    }
+    .logo {
 
-    .shapes {
-        ul {
-            li {
-                position: absolute;
-                display: inline-block;
-                &:nth-child(1) {
-                    right: 30.88px;
-                    bottom: 26.58px;
-                }
-            }
-        }
     }
 }
 
