--- a/scss/components/_cp-logo-card.scss
+++ b/scss/components/_cp-logo-card.scss
@@ -5,6 +5,7 @@
     @include transition;
     margin-bottom: 11px;
     height: 150px;
+    background: $color-white;
     
     .logo {
         img {
