--- a/scss/layouts/_lo-faq.scss
+++ b/scss/layouts/_lo-faq.scss
@@ -140,7 +140,8 @@
             position: absolute;
             right: 85px;
             bottom: 0;
-            z-index: 1;
+            z-index: -1;
+            display: none;
             ul {
                 li {
                     position: absolute;
@@ -148,33 +149,36 @@
                         top: -62px;
                         left: -100px;
                         z-index: -3;
-                        animation: leaf1 8s linear infinite;
+                        animation: leaf1 4s linear infinite;
                     }
                     &:nth-child(2) {
                         top: -150px;
                         left: -71px;
                         z-index: -1;
-                        animation: leaf2 8s linear infinite;
+                        animation: leaf2 5s linear infinite;
                     }
                     &:nth-child(3) {
                         top: -241px;
                         left: 48px;
                         z-index: -2;
-                        animation: leaf3 8s linear infinite;
+                        animation: leaf3 6s linear infinite;
                     }
                 }
+            }
+            @include media-only ('md', min) {
+                display: block;
             }
         }
     }
 }
 
 @keyframes leaf1 { 
-	0% { transform: rotateX(10deg) rotateY(35deg) rotateZ(15deg); animation-timing-function: ease-in-out;}
+	0% { transform: rotateX(10deg) rotateY(35deg) rotateZ(10deg); animation-timing-function: ease-in-out;}
 	20% { transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg); animation-timing-function: ease-in-out;}
-	40% { transform: rotateX(10deg) rotateY(35deg) rotateZ(15deg); animation-timing-function: ease-in-out;}
+	40% { transform: rotateX(10deg) rotateY(35deg) rotateZ(10deg); animation-timing-function: ease-in-out;}
 	60% { transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg); animation-timing-function: ease-in-out;}
-	80% { transform: rotateX(10deg) rotateY(35deg) rotateZ(15deg); animation-timing-function: ease-in-out;}
-	100% { transform: rotateX(10deg) rotateY(35deg) rotateZ(15deg); animation-timing-function: ease-in-out;}
+	80% { transform: rotateX(10deg) rotateY(35deg) rotateZ(10deg); animation-timing-function: ease-in-out;}
+	100% { transform: rotateX(10deg) rotateY(35deg) rotateZ(10deg); animation-timing-function: ease-in-out;}
 }
 @keyframes leaf2 { 
 	0% { transform: rotateX(-30deg) rotateY(-27deg) rotateZ(-11deg); animation-timing-function: ease-in-out;}
