--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -75,7 +75,7 @@
     --color-shade21: #0ED86B;
     --color-shade22: #4291EE;
     --color-shade23: #FF912B;
-    --color-shade24: ;
+    --color-shade24: #F8851C;
     --color-shade25: ;
     --color-shade26: ;
     --color-shade27: ;
