--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -187,4 +187,47 @@
             }
         }
     }
+    &--style-4 { 
+        border: 1px solid #E1E1E1;
+        border-radius: 20px;
+        padding: 68px 70px;
+        @include transition;
+        .icon {
+            margin-bottom: 20px;
+        }
+        .card-btn {
+            border: 1px solid #D9D9D9;
+            border-radius: 100px;
+            padding: 0;
+            @include transition;
+            width: 35px;
+            height: 35px;
+            
+        }
+        .card-title {
+            margin-bottom: 10px;
+            a {
+                font-weight: 600;
+                font-size: 21px;
+            }
+            line-height: 26px;
+        }
+        .card-info {
+            margin-bottom: 17px;
+        }
+
+
+        &:hover {
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.08);
+            border: 1px solid transparent;
+            .card-btn {
+                background: $color-shade24;
+                border: 1px solid transparent;
+                svg {
+                    fill: $color-white;
+                    @include transition;
+                }
+            }
+        }
+    }
 }
