--- a/scss/layouts/_lo-find-communities.scss
+++ b/scss/layouts/_lo-find-communities.scss
@@ -22,7 +22,7 @@
         .slider-navigation-btn-wrapper {
             .swiper-arrow {
                 top: 40%;
-                background: #FFFFFF;
+                background: $color-white;
                 box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.07);
                 border: none;
             }
