--- a/scss/layouts/_lo-find-communities.scss
+++ b/scss/layouts/_lo-find-communities.scss
@@ -9,6 +9,9 @@
 
         }
     }
+    .swiper {
+        padding-bottom: 0;
+    }
     .wrapper {
         position: relative;
         .slider-navigation-btn-wrapper {
