--- a/scss/components/_cp-counter.scss
+++ b/scss/components/_cp-counter.scss
@@ -1,99 +1,35 @@
 .rt-counter-item {
-    gap: 20px;
-
+    gap: 15px;
+    background: #FFFFFF;
+    border-radius: 20px;
+    padding: 33px 34px;
+    @include transition;
     .item-title {
-        padding-top: 10px;
         h3 {
-            font-family: $font-outfit;
-            font-weight: 600;
-            @include toRem(font-size, 48);
-            line-height: 30px;
-            text-transform: capitalize;
-            color: $color-white;
-            margin-bottom: 10px;
+            font-family: $font-roboto;
+            font-weight: 700;
+            @include toRem(font-size, 30);
+            line-height: 35px;
+            color: $color-title;
+            margin-bottom: 6px;
         }
 
         .label {
-            font-family: $font-outfit;
+            font-family: $font-roboto;
             font-weight: 400;
-            @include toRem(font-size, 20);
-            line-height: 30px;
-            text-transform: capitalize;
-            color: $color-white;
+            @include toRem(font-size, 18);
+            line-height: 21px;
+            color: $color-title;
         }
     }
     
-    &--style-2 {
-        .icon {
-            border: 1px solid #D5D1E1;
-            border-radius: 10px;
-            width: 79px;
-            height: 79px;
-            position: relative;
-            overflow: hidden;
-            @include transition;
-            &::before {
-                content: "";
-                border-radius: 10px;
-                position: absolute;
-                width: 0;
-                height: 0;
-                background: $color-primary;
-                top: 0;
-                left: 0;
-                @include transition;
-                z-index: -1;
-            }
-            &:hover {
-                &::before {
-                    width: 120%;
-                    height: 120%;
-                }
-                border: 1px solid transparent;
-            }
-        }
-        .item-title { 
-            padding-top: 0;
-            h3 {
-                @include toRem(font-size, 30);
-                line-height: 30px;
-                font-weight: 700;
-                color: $color-title;
-            }
-            .label {
-                @include toRem(font-size, 18);
-                // line-height: 48px;
-                color: #9D9CAE;
-            }
-        }
-    }
-    &--style-3 {
-        .item-title { 
-            position: relative;
-            z-index: 0;
-            h3 {
-                @include toRem(font-size, 40);
-                line-height: 30px;
-                font-weight: 700;
-                color: $color-title;
-            }
-            .label {
-                @include toRem(font-size, 18);
-                // line-height: 48px;
-                color: $color-gray12;
-            }
-            .counter-shapes {
-                ul {
-                    li {
-                        position: absolute;
-                        z-index: -1;
-                        &:nth-child(1) {
-                            top: -10px;
-                            right: 0;
-                        }
-                    }
-                }
-            }
+    &--style-1 {
+        width: 240px;
+        height: 140px;
+        @include transition;
+        &:hover {
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
+            transform: translateY(-12px);
         }
     }
 }
