--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -94,8 +94,8 @@
             left: 0;
             right: 0;
             width: 100%;
-            // height: 745px;
             z-index: -1;
+            text-align: center;
         }
         .rt-hero-section-content-wrapper {
             .section-text-content {
