--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -230,4 +230,49 @@
             }
         }
     }
+    &--style-5 {
+        background: $color-white;
+        border-radius: 10px;
+        padding: 80px 70px;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.03);
+        border-radius: 10px;
+        @include transition;
+
+        .icon {
+            margin-bottom: 15px;
+            background: transparent;
+        }
+        .card-btn {
+            border: 1px solid #D9D9D9;
+            border-radius: 100px;
+            padding: 0;
+            @include transition;
+            width: 35px;
+            height: 35px;
+            
+        }
+        .card-title {
+            margin-bottom: 15px;
+            a {
+                font-weight: 700;
+                font-size: 30px;
+                line-height: 45px;
+            }
+            line-height: 45px;
+        }
+        .card-info {
+            margin-bottom: 17px;
+        }
+        .text-link {
+            font-family: 'Roboto';
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 45px;
+            color: #2266EA;
+        }
+
+        &:hover {
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+        }
+    }
 }
