--- a/scss/layouts/_lo-testimonial.scss
+++ b/scss/layouts/_lo-testimonial.scss
@@ -1,196 +1,50 @@
 .testimonial-section {
     overflow: hidden;
-    .section-text-content {
-        .section-heading {
-            margin-bottom: 40px;
+    &--style-2 {
+        padding-top: 28px;
+        background: #fafafa;
+        .testimonial-img-area {
             position: relative;
-        }
-        .para-text {
-
-        }
-    }
-
-    
-    
-    // .swiper {
-    //     margin: 0 0;
-    //     @include media-only('lg', min) {
-
-    //         .visible-first {
-    //             opacity: 0.5;
-    //         }
-    //         .visible-last {
-    //             opacity: 0.5;
-    //         }
-    //     }
-    // }
-
-
-    &--style-3 {
-        .swiper {
-            margin: 0 0;
-            padding-bottom: 0;
-
-            // .swiper-slide { width: 100% !important; }
-
-            .visible-first {
-                opacity: unset;
-            }
-            .visible-last {
-                opacity: unset;
-            }
-        }
-        .swiper-pagination {
             z-index: 1;
+            img {
+                max-width: unset;
+            }
+            &::before {
+                content: "";
+                position: absolute;
+                width: 560px;
+                height: 560px;
+                background: #FFE7E7;
+                border-radius: 50%;
+                z-index: -1;
+                margin: 0 auto;
+                display: inline-block;
+                left: 0;
+                right: 0;
+                top: 175px;
+            }
         }
-        .testimonial-item {
-            padding: 0;
-            border: none;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-            border-radius: 20px;
-            overflow: hidden;
-            gap: 0;
-            position: relative;
-            .testimonial-img-area {
-                height: 100%;
-                background: #F0E1C9;
-                border-radius: 15px 0px 0px 15px;
-                padding: 0;
-                @include media-only('lg', min) {
-                    padding: 45px 53px 0 16px;
-                }
-                position: relative;
-                z-index: 0;
-                img {
-                    width: 100%;
-                    height: auto;
-                    @include media-only(1400px, min) {
-                        width: 413px;
-                        height: 458px;
-                    }
-                }
-                .shapes {
-                    ul {
-                        li {
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            z-index: -1;
-                        }
+        .slider-navigation-btn-wrapper {
+            .swiper-arrow {
+                width: 40px;
+                height: 40px;
+                background: #F1F1F1;
+                border: none;
+                &:hover {
+                    background: #F8851C;
+                    svg {
+                        fill:  $color-white;
                     }
                 }
             }
-            
-            .testimonial-text-content {
-                height: 100%;
-                // flex: 1;
-                background: $color-secondary;
-                padding: 20px;
-                @include media-only (1400px, min) {
-                    padding: 74px 0 64px 95px;
-                }
-                .section-text-content {
-                    .section-heading {
-                        color: $color-white;
-                        line-height: 48px;
-                        margin-bottom: 29px;
-                        width: 100%;
-                        @include media-only ('md', min) {
-                            width: 496px;
-                        }
-                        &::before {
-                            right: 5px;
-                            top: 19px;
-                            left: unset;
-                        }
-                        &::after {
-                            content: url(../images/testimonial/red-star.svg);
-                            position: absolute;
-                            right: -140px;
-                            top: -15px;
-                            z-index: -1;
-                            width: 111.73px;
-                            height: 105.45px;
-                            @include media-only (1500px, min) {
-                                right: -240px;
-                            }
-                        }
-                    }
-                    .ratings {
-                        margin-bottom: 17px;
-                        ul {
-                            gap: 5.44px;
-                        }
-                    }
-                    .para-text {
-                        width: 100%;
-                        color: #9D9CAE;
-                        margin-bottom: 25px;
-                        // width: 565px;
-                        @include media-only ('xl', min) {
-                            width: 565px;
-                        }
-                    }
-                }
-                .comment-author-details {
-                    .author-name {
-                        font-family: $font-outfit;
-                        font-weight: 500;
-                        font-size: 24px;
-                        line-height: 28px;
-                        text-transform: capitalize;
-                        color: $color-white;
-                    }
-                    .designation {
-                        font-family: $font-outfit;
-                        font-weight: 400;
-                        font-size: 16px;
-                        line-height: 28px;
-                        text-transform: capitalize;
-                        color: #9D9CAE;
-
-                    }
-                }
+            .prev {
+                top: 95%;
+                left: 43%;
+            }
+            .next {
+                top: 95%;
+                right: 43%;
             }
         }
-        //swiper-bullets
-        .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction {
-            bottom: unset;
-            width: unset;
-            left: unset;
-            top: 60%;
-            right: 20px;
-            @include media-only ('lg', min) {
-                right: 97px;
-            }
-        }
-        .swiper-vertical>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-            margin: 10px 0;
-        }
-    }
-
-    &--style-4 {
-        .testimonial-item-wrapper {
-            gap: 24px;
-            margin-bottom: 30px;
-            
-            .testimonial-item {
-                width: 449px;
-            }
-        }
-    }
-    
-}
-
-.test-wrapper {
-    position: relative;
-    &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 489px;
-        left: 0px;
-        top: 155px;
-        background: #FAF9F6;
     }
 }
