--- a/scss/layouts/_lo-faq.scss
+++ b/scss/layouts/_lo-faq.scss
@@ -6,7 +6,6 @@
             position: absolute;
             left: 53px;
             bottom: 34px;
-            // animation: leaf1 8s linear infinite;
         }
     }
     .faq-nav-wrapper {
@@ -32,7 +31,6 @@
                     padding-top: 0;
                 }
                 &:last-child {
-                    // border: none;
                 }
                 &::before {
                     content: "\2022";
@@ -66,10 +64,6 @@
     .faq-pane-wrapper {
 
         .accordion-button {
-            // color: $color-title;
-            // background: $color-white;
-            // box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04);
-            // border-radius: 10px;
             padding: 20px 30px;
 
             font-family: 'Roboto';
@@ -115,9 +109,7 @@
         }
         
         .accordion-flush .accordion-item .accordion-button {
-            // border-radius: 5px;
             &:last-child {
-                // border-radius: 6px;
             }
         }
         
@@ -125,9 +117,6 @@
         .accordion-body {
             border: none;
             padding: 0px 30px 29px 30px;
-            // border-radius: 0px 0px 10px 10px;
-            // background: $color-white;
-            // box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04);
             font-family: 'Roboto';
             font-weight: 400;
             font-size: 15px;
@@ -167,6 +156,42 @@
             }
             @include media-only ('md', min) {
                 display: block;
+            }
+        }
+    }
+    &--style-2 {
+        .faq-content-wrapper {
+            &::before {
+                display: none;
+            }
+        }
+        .section-text-content {
+            .section-heading {
+                padding: 0;
+                border-bottom: none;
+            }
+        }
+        .faq-nav-wrapper {
+            .nav {
+                .nav-link {
+                    &:after {
+                        border-bottom: 1px solid #F8851C;
+                    }
+                    &:hover {
+                        color: #F8851C;
+                        &::before {
+                            color: #F8851C;
+                        }
+                        &:after {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+        .faq-pane-wrapper { 
+            .accordion-flush .accordion-item .accordion-button:not(.collapsed) {
+                color: #F8851C;
             }
         }
     }
