--- a/scss/layouts/_lo-call-to-action.scss
+++ b/scss/layouts/_lo-call-to-action.scss
@@ -48,6 +48,10 @@
                 background: $color-secondary;
                 color: $color-white;
             }
+            &--style-2 {
+                background: $color-shade25;
+                color: $color-white;
+            }
         }
     }
 }
