--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -76,9 +76,9 @@
     --color-shade22: #4291EE;
     --color-shade23: #FF912B;
     --color-shade24: #F8851C;
-    --color-shade25: ;
-    --color-shade26: ;
-    --color-shade27: ;
+    --color-shade25: #8A58F3;
+    --color-shade26: #FF557B;
+    --color-shade27: #3B72FE;
     --color-shade28: ;
     --color-shade29: ;
     --color-shade30: ;
