--- a/scss/components/_cp-searchbox.scss
+++ b/scss/components/_cp-searchbox.scss
@@ -90,6 +90,11 @@
     }
 
     &--style-3 {
-        
+        box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.05);
+        .searchbox-submit {
+            .rt-searchbox-btn {
+                background: $color-shade25;
+            }
+        }
     }
 }
