--- a/scss/layouts/_lo-best-online-doc.scss
+++ b/scss/layouts/_lo-best-online-doc.scss
@@ -111,4 +111,104 @@
             display: none;
         }
     }
+    &--style-3 { 
+        .best-online-doc-forum-area {
+            background: #FFFFFF;
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
+            border-radius: 20px;
+            padding: 50px;
+            .title {
+                font-family: 'Roboto';
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 30px;
+                color: #1D2746;
+                margin-bottom: 20px;
+            }
+            .forum-form {
+                margin-bottom: 60px;
+                form {
+                    .input-area {
+                        margin-bottom: 20px;
+                        input {
+                            border: 1px solid #CACACA;
+                            border-radius: 5px;
+                            width: 100%;
+                            padding: 20px;
+        
+                            font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 15px;
+                            line-height: 18px;
+                            color: #9B9B9B;
+                            &::placeholder {
+                                color: #9B9B9B;
+                            }
+                        }
+                        textarea {
+                            border: 1px solid #CACACA;
+                            border-radius: 5px;
+                            width: 100%;
+        
+                            font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 15px;
+                            line-height: 18px;
+                            color: #9B9B9B;
+                            padding: 20px;
+                            &::placeholder {
+                                color: #9B9B9B;
+                            }
+                        }
+                    }
+                    .category-selector {
+                        margin-bottom: 20px;
+                        .nice-select {
+                            border: 1px solid #CACACA;
+                            width: 100%;
+                            height: 60px;
+                            padding: 10px 20px;
+                            &::after {
+                                right: 23px;
+                            }
+                        }
+                    } 
+                    .form-btn {
+                        a {
+                            background: #8A58F3;
+                            border-radius: 500px;
+                            color: $color-white;
+                            padding: 14px 25px;
+    
+                            font-family: 'Roboto';
+                            font-weight: 600;
+                            font-size: 16px;
+                            line-height: 19px;
+                        }
+                    }
+                }
+            }
+            .contact-area {
+                .contact-info-wrapper {
+                    .contact-info {
+                        gap: 10px;
+                        a, p {
+                            font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 16px;
+                            line-height: 30px;
+                            /* identical to box height, or 188% */
+
+
+                            color: #1D2746;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
